Fix overflow error on mobile devices

--- a/app/assets/stylesheets/resume.scss
+++ b/app/assets/stylesheets/resume.scss
@@ -16,7 +16,7 @@ $tinyPageWidth: 48px;
 
     &.header {
       padding-top: 20px;
-      overflow: auto;
+      overflow: visible;
       width: 100%;
 
       h1 {
